--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,21 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Libertinus+Mono&display=swap');
+
+
+html {
+  scroll-behavior: smooth;
+}
+/* globals.css */
+
+/* globals.css */
+
+
+/* Apply Libertinus font globally */
+body {
+  font-family: 'Libertinus Mono', monospace !important;
+}
+
+
 
 :root {
   --background: #ffffff;
